# autograd-from-scratch

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  autograd-from-scratch.ipynb  build.sh  demo.ipynb  kernel_test.cpp  pyproject.toml  pytest.ini  utils.py
autograd/: __init__.py
autograd/csrc/: allocator.cpp  bindings.cpp  core.cpp  dispatch.cpp  functional.cpp  main.cpp  ops_c.cpp  ops_common.cpp  ops_cuda.cu  utils.cpp
autograd/csrc/allocator/: pool.cpp  pool.h
autograd/csrc/constants/: enums.h
autograd/csrc/dispatcher/: dispatcher.cpp  dispatcher.h
autograd/csrc/engine/: backward.cpp  backward.h  graph.cpp  graph.h
autograd/csrc/function/: function.cpp  function.h
autograd/csrc/include/: allocator.h  core.h  dispatch.h  functional.h  ops_c.h  ops_common.h  ops_cuda.h  optimizer.h  utils.h
autograd/csrc/ops/: ops_common.cpp  ops_common.h
autograd/csrc/ops/cpu/: ops.cpp  ops.h
autograd/csrc/ops/cuda/: ops.cu  ops.h  utils.h
autograd/csrc/optimizer/: sgd.h
autograd/csrc/tensor/: tensor.cpp  tensor.h
autograd/csrc/triton/: ptxget.py  triton_kernels.py
autograd/csrc/utils/: utils.h
autograd/lib/: _C.pyi
autograd/src/: __init__.py  backend.py  constants.py  core.py  dynamic.py  functional.py  fusion.py  utils.py
autograd/tests/: test_autograd.py  test_ops_c.py  test_ops_common.py
src/: backward.cpp  backward.hpp  bindings.cpp  threadpool.cpp  threadpool.hpp  utils.py
